--- a/Dossier Lucia/Dossier Lucia/index.html
+++ b/Dossier Lucia/Dossier Lucia/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul>
-                <li id="logo"><a href="#">Diamalaye Hotell</a></li>
+                <li id="logo"><a href="#">Diamalaye Hotel</a></li>
                 <li><a href="#langue">Langue</a></li>
                 <li><a href="#reserve">Reserve</a></li>
                 <li><a href="#contact">Nous Contacter</a></li>
